--- a/MvcChallenge2016/MvcChallenge2016/Views/Default/Index.cshtml
+++ b/MvcChallenge2016/MvcChallenge2016/Views/Default/Index.cshtml
@@ -6,6 +6,7 @@
             <tr>
                 <th>Title</th>
                 <th>Author(s)</th>
+                <th></th>
             </tr>
         </thead>
 
@@ -17,6 +18,11 @@
                 <td><span class="glyphicon glyphicon-trash"></span></td>
             </tr>
         }
+        <tr>
+            <td><button type="button" class="btn btn-default glyphicon glyphicon-plus"/></td>
+            <td></td>
+            <td></td>
+        </tr>
     </table>
 <p>
     @Html.ActionLink("Add", "Add", new { /* id = Model.PrimaryKey */ })
